# personal-finance-tracker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  financa.bat  finance.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: comandos.md
migrations/: env.py
migrations/versions/: 001_schema_inicial.py
scripts/: init.sql  seed.py
src/: __init__.py  config.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  categorias.py  dashboard.py  metas.py  relatorios.py  transacoes.py
src/cli/ui/: __init__.py  paineis.py  prompts.py  tabelas.py
src/database/: __init__.py  conexao.py
src/models/: __init__.py  base.py  categoria.py  conta.py  meta.py  transacao.py
src/repositories/: __init__.py  base.py  categoria_repo.py  conta_repo.py  meta_repo.py  transacao_repo.py
src/services/: __init__.py  exportacao_service.py  meta_service.py  relatorio_service.py  transacao_service.py
static/css/: style.css
static/js/: app.js
templates/: base.html  dashboard.html  metas.html  relatorios.html  transacoes.html
tests/: __init__.py  conftest.py  test_meta_service.py  test_relatorio_service.py  test_repositories.py  test_transacao_service.py
